--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,13 @@ android {
         applicationId "com.example.assignment_09"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        // minSdkVersion flutter.minSdkVersion
+        // targetSdkVersion flutter.targetSdkVersion
+        //-------------CUSTOM----------------------------------------------------------------
+        minSdkVersion 19
+        targetSdkVersion 33
+        multiDexEnabled true
+        //-----------------------------------------------------------------------------------
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
