--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.5
 
 dev_dependencies:
   flutter_test:
